fix(progress_bar) CPI-265 improve progress bar visibility

--- a/app/modules/rl_seeds/_color_palette.scss
+++ b/app/modules/rl_seeds/_color_palette.scss
@@ -1,4 +1,5 @@
 $color-brand: #F16724;
+$color-warning: #FFBF00;
 $color-action: #99CC00;
 $color-info: #3399CC;
 $color-danger: #D70014;
